﻿drkns 29.04.2016 19:13:57 +0200 - build 4653

1. С форума: в текущей ночной при попытке запустить команду far из комстроки far он сам себя не находит.

drkns 29.04.2016 17:31:01 +0200 - build 4652

1. Продолжение 4646 - уберём ненужные блокировки окон.

drkns 29.04.2016 16:10:52 +0200 - build 4651

1. Продолжение 4648.

drkns 29.04.2016 13:55:48 +0200 - build 4650

1. И ещё раз.

drkns 29.04.2016 10:36:00 +0200 - build 4649

1. Уточнение 4644.

drkns 29.04.2016 09:32:30 +0200 - build 4648

1. Продолжение 4631 - восстановим работоспособность System.ShowCheckingFile.

drkns 28.04.2016 19:43:18 +0200 - build 4647

1. Продолжение 4631.

drkns 28.04.2016 19:06:43 +0200 - build 4646

1. Продолжение 4631 - уберём ненужные блокировки окон.

drkns 28.04.2016 16:52:55 +0200 - build 4645

1. Уточнение 4644.

drkns 28.04.2016 16:47:33 +0200 - build 4644

1. Продолжение экспериментальных изменений в запускателе:
   - System.Executor.NotQuotedShell и System.Executor.ComSpecParams больше нет. Однако, теперь есть System.Executor.ComspecArguments, управляющий одновременно и ключами, и кавычками.
     По умолчанию значение совместимо с cmd.exe - /S /C "{0}", где {0} будет заменено исполняемой командой.
     Для bash замените на -c '{0}', для tcc - на -с {0}
   - (частично) #0003223: при передаче в comspec разворачивалось больше, чем нужно.

2. Используем std::atomic<T> вместо Interlocked*().

zg 28.04.2016 13:20:04 +0200 - build 4643

1. в комбобоксе не срабатывал хоткей для текущего элемента.

drkns 28.04.2016 10:40:27 +0200 - build 4642

1. Уточнение 4631.

drkns 26.04.2016 22:50:38 +0200 - build 4641

1. Уточнение 4635: показываем "remaining:" при копировании одного файла и обновляем его с той же частотой, что и скорость.

zg 26.04.2016 16:23:31 +0200 - build 4640

1. в диалоге копирования была возможность выбрать "Also ask on R/O files".

2. уточнение посылки DN_INPUT/DN_CONTROLINPUT для открытого комбобокса.
