@@ -1,4 +1,8 @@
-﻿drkns 29.04.2016 19:13:57 +0200 - build 4653
+﻿drkns 30.04.2016 15:16:06 +0200 - build 4654
+
+1. Продолжим чинить запускатель.
+
+drkns 29.04.2016 19:13:57 +0200 - build 4653
 
 1. С форума: в текущей ночной при попытке запустить команду far из комстроки far он сам себя не находит.
 
